src/objects/Error_Logs__c.object
<CustomObject>
    <description>Object to log errors</description>
    <fields>
        <fullName>Additional_Details_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Details 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Overpayment Validation</fullName>
                </value>
                <value>
                    <fullName>Invalid Id</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DML_Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DML Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DML_Field_Names__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DML Field Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DML_Id_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DML Id&apos;s</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DML_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DML Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Cause__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Cause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Desciption</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Line_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Stack__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Stack</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functionality_Impacted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Functionality Impacted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Package__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Impacted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User Impacted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>sObject Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Error_Category__c</columns>
        <columns>sObject__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Source_Package__c</columns>
        <columns>User_Impacted__c</columns>
        <columns>Error_Cause__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_TODAY</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Error_Category__c</columns>
        <columns>sObject__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Source_Package__c</columns>
        <columns>User_Impacted__c</columns>
        <columns>Error_Cause__c</columns>
        <columns>Error_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All TODAY</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Debug_Today</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Error_Category__c</columns>
        <columns>Classification__c</columns>
        <columns>sObject__c</columns>
        <columns>User_Impacted__c</columns>
        <columns>Error_Code__c</columns>
        <columns>sObject_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Error_Category__c</field>
            <operation>equals</operation>
            <value>Debug</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Debug - Today</label>
    </listViews>
    <listViews>
        <fullName>Error_Invalid_ID</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Error_Category__c</columns>
        <columns>sObject__c</columns>
        <columns>User_Impacted__c</columns>
        <columns>Error_Cause__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Name__c</field>
            <operation>equals</operation>
            <value>ARDC_processSCSPaymentCallback.cls</value>
        </filters>
        <filters>
            <field>Error_Category__c</field>
            <operation>equals</operation>
            <value>Critical</value>
        </filters>
        <filters>
            <field>User_Impacted__c</field>
            <operation>equals</operation>
            <value>az_community@azdoa.force.com</value>
        </filters>
        <filters>
            <field>DML_Type__c</field>
            <operation>equals</operation>
            <value>CANNOT_INSERT_UPDATE_ACTIVATE_ENTITY</value>
        </filters>
        <label>Error Invalid ID</label>
    </listViews>
    <listViews>
        <fullName>ExceptionAll</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Error_Category__c</columns>
        <columns>Classification__c</columns>
        <columns>sObject__c</columns>
        <columns>User_Impacted__c</columns>
        <columns>Error_Cause__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Error_Category__c</field>
            <operation>equals</operation>
            <value>Critical</value>
        </filters>
        <label>Exception - All</label>
    </listViews>
    <listViews>
        <fullName>ExceptionToday</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Error_Category__c</columns>
        <columns>Classification__c</columns>
        <columns>sObject__c</columns>
        <columns>User_Impacted__c</columns>
        <columns>Error_Cause__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Error_Category__c</field>
            <operation>equals</operation>
            <value>Critical</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Exception - Today (Critical)</label>
    </listViews>
    <listViews>
        <fullName>ExceptionTodayNoClass</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Error_Category__c</columns>
        <columns>Classification__c</columns>
        <columns>sObject__c</columns>
        <columns>User_Impacted__c</columns>
        <columns>Error_Cause__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Classification__c</field>
            <operation>equals</operation>
        </filters>
        <label>Exception - Today (No Classification)</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{00000000}</displayFormat>
        <label>Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>